# paramotopy

./: .gitignore  CMakeLists.txt  COPYING  README  README.md  bertini_funcs.h  configure.ac  custombertini.c  custombertini_Makefile  files.cmake  menu_cases.cpp  menu_cases.h  para_aux_funcs.h  paramotopy_license.txt  paramotopyconfig.h.in  preferences.cpp  preferences.h  slave.cpp  slave.h
.github/workflows/: github-gitlab-sync.yml
cmake/: FindGMP.cmake  FindMPFR.cmake  Findbertini1.cmake  paramotopyConfig.cmake.in
cross_input/: cross_input.cpp
cross_input/trunk/: Makefile  cross_input
dissertation_prelim_danbrake/dissertation/diagrams/tmp/: RRtimestwo.eps
dissertation_prelim_danbrake/dissertation/prelim/: brakedissertation.aux  brakedissertation.bbl  brakedissertation.bib  brakedissertation.blg  brakedissertation.tex  brakedissertation.toc  mycommands.aux  mycommands.tex  packages.aux  packages.tex  topstuff.aux  topstuff.tex
documentation/: README.md  mainpage.dox
documentation/source/: p_manual_body.tex  p_manual_header.tex
documentation/source/inputs/: bioinput.para  output.para  s_rand
documentation_cpp/: paramotopy.doxy.config
examples/: bio
examples/bio_grid_one_param_50/: bio
examples/bio_uses_custom_sampling_10/: bio
examples/bio_uses_custom_sampling_one_param_10pts/: bio  my_samples
examples/bio_uses_custom_sampling_two_params_10pts/: my_samples
include/: controller.hpp  datagatherer.hpp  failed_paths.hpp  master.hpp  menu_cases.hpp  paramotopy_enum.hpp  slave.hpp  step2.hpp  timing.hpp  worker.hpp
include/paramotopy/: controller.hpp  datagatherer.hpp  failed_paths.hpp  menu_cases.hpp  para_aux_funcs.hpp  paramotopy.hpp  random.hpp  runinfo.hpp  step1_funcs.hpp  step2.hpp  step2_funcs.hpp  step2readandwrite.hpp  worker.hpp  xml_preferences.hpp
m4/: ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_regex.m4  ax_boost_system.m4
manual/: p_manual_body.tex  p_manual_header.tex  paramotopy_manual.tex
manual/diagrams/.svn/: entries
manual/inputs/: genericinput.para  roboinput.para  robomc.para
matlab/: assemble_data.m  assemble_data_pos_solns.m  assemble_data_real.m  assemble_data_userdef.m  gather_data_paramotopy.m  getlinecount.m  getuserindicestoplot_param.m  getuserindicestoplot_vars.m  increment_name.m  is_last_line_empty.m  make_mc_sample.m  make_nsolns_colorbar.m  parse_input.m  plot_numsolns_pos_real.m  plot_paramotopydata.m  render_into_file.m
paramotopy/: COPYING  Makefile.am  configure.ac  paramotopy_license.txt
paramotopy/documentation/: README  mainpage.dox  paramotopy.doxy.config
paramotopy/include/: datagatherer.hpp  failed_paths.hpp  master.hpp  menu_cases.hpp  para_aux_funcs.hpp  paramotopy.hpp  paramotopy_enum.hpp  point.hpp  preferences.hpp  random.hpp  runinfo.hpp  slave.hpp  step1_funcs.hpp  step2.hpp  step2_funcs.hpp  step2readandwrite.hpp  timing.hpp  xml_preferences.hpp
paramotopy/manual/: README.txt  biblioparama.bib  paramotopy_manual.tex
paramotopy/src/: Makefile  datagatherer.cpp  failed_paths.cpp  master.cpp  menu_cases.cpp  para_aux_funcs.cpp  paramotopy.cpp  preferences.cpp  runinfo.cpp  slave.cpp  step1_funcs.cpp  step2.cpp  step2_funcs.cpp  step2readandwrite.cpp  timing.cpp  xml_preferences.cpp
paramotopy/src/body/: Makemodule.am  datagatherer.cpp  failed_paths.cpp  menu_cases.cpp  para_aux_funcs.cpp  random.cpp  runinfo.cpp  xml_preferences.cpp
paramotopy/src/paramotopy/: Makemodule.am  paramotopy.cpp
paramotopy/src/step2/: Makemodule.am  master.cpp  step2.cpp  step2_funcs.cpp  step2readandwrite.cpp
paramotopy/trunk/: Makefile  batestest2  bio  bioin  biostart  config1  config2  datagatherer.cpp  datagatherer.hpp  exit_funcs.cpp  failed_paths.cpp  failed_paths.h  failed_paths.hpp  master.cpp  master.h  master.hpp  menu_cases.cpp  menu_cases.h  menu_cases.hpp  mystep2.cpp  para_aux_funcs.cpp  para_aux_funcs.h  para_aux_funcs.hpp  paramotopy.cpp  paramotopy_enum.h  point.cpp  point.hpp  preferences.cpp  preferences.h  preferences.hpp  random.cpp  random.hpp  runinfo.cpp  runinfo.h  runinfo.hpp  slave.cpp  slave.h  slave.hpp  step1.cpp  step1.h  (+15 more)
polysaurus/: Makefile  bio  bio-enzyme-stability3.4  callbertinistep1.sh  callbertinistep1parallel.sh  callbertinistep2.sh  config1  cpstartstep2.sh  mtrand.h  mymonte2  mystep2.cpp.bak  polysaurus  polysaurus.cpp.bak  random.cpp  randstartrobo  refined_workspacesample_grasp  reorder.cpp  reorderc  reorderout  robo  roboin  runbio.sh  runpoly.sh  serialcommands  step1.cpp  test.out  tmpbytecount
polysaurus/trunk/: Makefile  bio-enzyme-stability3.4copy  commands  master.cpp  master.h  mystep2  mystep2.cpp  polysaurus.cpp  random.cpp  random.h  reorder  step1.cpp  step1.h  step2.cpp  step2.h  step2readandwrite.cpp  step2readandwrite.h
sift_realsolns/: Makefile  sift_realsolns
sift_realsolns/trunk/: sift_realsolns.cpp
src/body/: datagatherer.cpp  failed_paths.cpp  menu_cases.cpp  mtrand.cpp  para_aux_funcs.cpp  point.cpp  random.cpp  runinfo.cpp  step1_funcs.cpp  timing.cpp  xml_preferences.cpp
src/paramotopy/: Makemodule.am  paramotopy.cpp
src/step2/: Makemodule.am  controller.cpp  slave.cpp  step2.cpp  step2_funcs.cpp  step2readandwrite.cpp  worker.cpp
src/tinyxml/: Makemodule.am  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
